FIX: Dropdown colour and menu spacing

--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -30,5 +30,11 @@ $text-color: #fff;
 .nav-link {
   .header-wrapper & {
     color: $text-color;
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
+  }
+
+  .dropdown-menu .nav-item > & {
+    color: $dark-color;
   }
 }
